projects/206-Kubernetes-Microservice-Phonebook/proje206_last_file/k8s/resultserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resultserver-deploy
  name: resultserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver-deploy
  template:
    metadata:
      labels:
        app: resultserver-deploy
    spec:
      containers:
      - image: muzeyyenalan/resultserver:v2
        name: resultserver
        ports:
          - containerPort: 80
        resources: {}
