projects/206-Kubernetes-Microservice-Phonebook/proje206_last_file/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebook
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: resultserver
            port:
              number: 80
